--- a/homepage/templates/contact.html
+++ b/homepage/templates/contact.html
@@ -41,20 +41,18 @@
     <h1 class="heading_medium"> Contact Info</h1>
     <span class="u_line"></span>
     <div class="col-md-6 min_padd">
-      <span class="heading_small" style="line-height:1.8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. </span>
+      <span class="heading_small" style="line-height:1.8">We can be approched via multiple means. Email / chat support will be the best one but still in case you need our help please visit us at the following address </span>
       <div class="min_padd">
-        <span> <b>MONDAY TO FRIDAY:</b> 09:00 hrs to 16:00 hrs</span><br>
-        <span> <b>SATURDAY & SUNDAY:</b> 09:00 hrs to 14:00 hrs</span><br>
+        <span> <b>MONDAY TO FRIDAY:</b> 09:00 AM to 20:00 PM</span><br>
+        <span> <b>SATURDAY & SUNDAY:</b> 09:00 AM to 18:00 PM</span><br>
       </div>
     </div>
     <div class="col-md-5 col-md-offset-1">
       <ul class="contact">
         <h4 class="text-muted"> Contact US</h4>
-        <li><i class="fa fa-map-marker text-muted" aria-hidden="true"></i> <span> <b> Address:</b> </span> <span class="text-muted"> Bangalore,KA,India</span> </li>
-        <li> <i class="fa fa-phone text-muted" aria-hidden="true"></i><span> <b> Phone:</b> </span> <span class="text-muted"> +9182373488</span> </li>
-        <li><i class="fa fa-envelope text-muted" aria-hidden="true"></i> <span> <b> Email:</b> </span> <span class="text-muted"> info@24tutors.in</span> </li>
+        <li><i class="fa fa-map-marker text-muted" aria-hidden="true"></i> <span> <b> Address:</b> </span> <span class="text-muted">4th floor, Venkatadhri Heights, Kudlu Bangalore 560068, KA, India</span> </li>
+        <li> <i class="fa fa-phone text-muted" aria-hidden="true"></i><span> <b> Phone:</b> </span> <span class="text-muted"> +91 - 7840850111</span> </li>
+        <li><i class="fa fa-envelope text-muted" aria-hidden="true"></i> <span> <b> Email:</b> </span> <span class="text-muted"> gethelp@24tutors.com</span> </li>
       </ul>
     </div>
   </div>
