--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -14,15 +14,14 @@
   <div class="container-fluid no_padding" style="min-height:13vh;">
     <div class="col-md-12 no_padding">
       <div class="col-md-6 text-center foo_bar">
-        <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Go to the <a >Forum</a> to meet students like you and Best teachers</span><br>
+        <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Go to the Forum to meet students like you and Best teachers</span><br>
       </div>
       <div class="col-md-6 text-center foo_bar">
         <div class="container-fluid no_padding social_div">
           <span style="color: #fff;font-size: 1.4em;font-weight:bold;padding-right:20px;">Follow us on</span>
           <br class="hidden-lg hidden-md">
-          <i aria-hidden="true" class="social_links fa fa-facebook " style="background:#0b208e;border:solid 2px #0b208e;"></i>
-          <i aria-hidden="true" class="social_links fa fa-twitter" style="background:#0094ff;solid 2px #0094ff;"></i>
-          <i aria-hidden="true" class="social_links fa fa-google-plus " style="background:#ff0000;solid 2px #ff0000;"></i>
+          <a href="https://www.facebook.com/24tutorsIndia/" aria-hidden="true" class="social_links fa fa-facebook " style="background:#0b208e;border:solid 2px #0b208e;"></a>
+          <a href="https://www.youtube.com/channel/UCv2rH3ci5gS06FSt6mTzLOA" aria-hidden="true" class="social_links fa fa-youtube" style="background:#ff0000;solid 2px #ff0000;"></a>
         </div>
       </div>
     </div>
@@ -32,44 +31,18 @@
       <div class="nc_links col-md-3">
         <ul class="list-unstyled">
           <h4 class="text-muted"><b>NCERT Solutions</b></h4>
-          <li><a href="">NCERT Class 12 Maths Solutions</a></li>
-          <li><a href="">NCERT Class 12 Physics Solutions</a></li>
-          <li><a href="">NCERT Class 12 Chemistry Solutions</a></li>
-          <li><a href="">NCERT Class 12 Biology Solutions</a></li>
-          <li><a href="">NCERT Class 11 Maths Solutions</a></li>
-          <li><a href="">NCERT Class 11 Physics Solutions</a></li>
+          <li><a href="/ncert-solutions-class-12-maths/">NCERT Class 12 Maths Solutions</a></li>
         </ul>
       </div>
       <div class="nc_links col-md-3">
         <ul class="list-unstyled">
-          <li><a href="">NCERT Class 11 Chemistry Solutions</a></li>
-          <li><a href="">NCERT Class 11 Biology Solutions</a></li>
-          <li><a href="">NCERT Class 10 Maths Solutions</a></li>
-          <li><a href="">NCERT Class 10 Science Solutions</a></li>
-          <li><a href="">NCERT Class 9 Maths Solutions</a></li>
-          <li><a href="">NCERT Class 9 Science Solutions</a></li>
+          <li><a href="/ncert-solutions-class-10-maths/">NCERT Class 10 Maths Solutions</a></li>
         </ul>
       </div>
       <div class="nc_links col-md-3">
         <ul class="list-unstyled">
           <h4 class="text-muted"><b>Text Book Solutions</b></h4>
-          <li><a href="">NCERT Solutions</a></li>
-          <li><a href="">RD Sharma Class 10 Solutions</a></li>
-          <li><a href="">RD Sharma Class 9 Solutions</a></li>
-          <li><a href="">RS Aggarwal Class 10 Solutions</a></li>
-          <li><a href="">HC Verma Solutions</a></li>
-          <li><a href="">ICSE Class 10 Solutions</a></li>
-        </ul>
-      </div>
-      <div class="nc_links col-md-3">
-        <ul class="list-unstyled">
-          <h4 class="text-muted"><b>Question Papers</b></h4>
-          <li><a href="">Previous Year Question Paper </a></li>
-          <li><a href="">CBSE Previous Year Paper for class 10 </a></li>
-          <li><a href="">CBSE Previous Year Paper for class 12 </a></li>
-          <li><a href="">CBSE Class 12 Sample Papers</a></li>
-          <li><a href="">CBSE Class 10 Sample Papers</a></li>
-          <li><a href="">ICSE Class 10 Sample Papers</a></li>
+          <li><a href="/hc-verma-solutions/">HC Verma Solutions</a></li>
         </ul>
       </div>
     </div>
