--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -420,7 +420,7 @@
           <div class="colorcircle1" ng-style="myObjcolor">
           </div>
           <div class="col-md-5 studentcard1" style="min-height:300px;">
-            <img src="/static/images/24tut/student1.png" class="imgstyle" style="margin-bottom: 20px;" />
+            <img src="/static/images/pawan_rathod.jpg" class="imgstyle" style="margin-bottom: 20px;" />
           </div>
         </div>
       </div>
@@ -443,7 +443,7 @@
           <div class="colorcircle1">
           </div>
           <div class="col-md-5 studentcard1" style="min-height:300px;">
-            <img src="/static/images/24tut/student3.png" class="imgstyle" style="margin-bottom: 20px;" />
+            <img src="/static/images/shubham_verma.jpg" class="imgstyle" style="margin-bottom: 20px;" />
           </div>
         </div>
       </div>
