--- a/homepage/templates/testimonials.html
+++ b/homepage/templates/testimonials.html
@@ -6,8 +6,8 @@
 
 <div class="row" style="margin:0px;" ng-controller="testimonials">
 
-  <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');margin:0">
-    <div class="col-md-12" style="padding-top:20%;padding-left:21%;">
+  <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/ress.JPG');margin:0">
+    <div class="col-md-12" style="padding-top:20%;padding-left:15%;">
       <span style="color:#fff;font-size:4em;font-weight:bolder;">Students</span><br>
       <span class="u_line"></span>
       <h5 style="color:#fff;">Home / About / Students</h5>
@@ -16,24 +16,18 @@
 
   <div class="container-fluid" style="background-image:url('static/images/24tut/part.png');background-size:contain;background-position:right;background-repeat:no-repeat;margin-bottom:3em;">
     <div class="container">
-      <div class="col-md-4" style="margin-top:4em;">
-        <h2 class="heading_medium">The Best Course you can get in eLearny</h2>
+      <div class="col-md-6" style="margin-top:4em;">
+        <h2 class="heading_medium">The Best Self Paced Courses you can get in India</h2>
         <span class="u_line"></span>
         <div class="min_padd">
-          <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmodtempor.
+          <span class="heading_small">As we all know IIT JEE Preparation is not a sprint but a marathon which neeeds consitancy in preperation and testing. The conventional method of going for coaching class or online class might work for some of us but at the end of the you yourself have to take the lead in your studies.
           </span>
         </div>
-        <button class="btn-style1" type="button"><b>Enjoy New Era in Learning</b></button>
+        <button class="btn-style1" type="button" ng-click="signin()"><b>Enjoy New Era in Learning</b></button>
       </div>
       <div class="col-md-4 col-md-offset-1 text-left" style="margin-top:5em;">
-        <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          smodtempor Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-          veniam, quis nostrud xcepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <span class="heading_small">We at 24tutors try to motivate students to opt for self paced learning strategy where they go through videos and books at a speed which they can handle afterall its your journey. So we break the studies into two sections, the learning and practice. We try our best to give you the best ever content and strategy but still if you feel that you need someone to look at the problem and guide you in a topic you can always connect us for an instant session. We get requests from all around the world every other minute and have taken care of sourcing the best teachers ever.
         </span>
-      </div>
-      <div class="col-md-3 text-center" style="margin-top:5em;">
-        <img src="static/images/24tut/GIRL WITH BOOK.png" style="width:100%;" />
       </div>
     </div>
   </div>
@@ -81,205 +75,109 @@
     </div>
   </div>
 
-  <div class="container text-center" style="margin-bottom:4em;">
-    <h1 style="padding-top: 2em;color:#ooo;"><b>Popular Students</b></h1>
-    <span style="font-size:20px;color:#5B5B5B;">Their Lives are Better Now</span>
-    <div class="row" style="margin-top:2em;">
-      <div class="col-md-6" style="position: relative;">
-        <div class="movie-card">
-          <div class="col-md-5 studentcard" style="min-height:300px;">
-            <img src="/static/images/24tut/student3.png"  class="imgstyle" />
-          </div>
-          <div class="circle">
-            <div><b>83%</b></div>
-          </div>
-          <div class="colorcircle">
-          </div>
-          <div class="col-md-7 text-left">
-            <div style="margin-top:3em;">
-              <span style="font-size:18px;color:#5B5B5B;">Successfully Completed Grade 3 science & Technology Classes</span>
-            </div>
-            <div class="stucardtext">
-              <span style="font-size:18px;"><b>Laren Ralpha</b></span>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Scientology Student - Europe</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6" style="position: relative;">
-        <div class="movie-card">
-          <div class="col-md-5 studentcard" style="min-height:300px;">
-            <img src="/static/images/24tut/student2.png"  class="imgstyle" />
-          </div>
-          <div class="circle">
-            <div><b>83%</b></div>
-          </div>
-          <div class="colorcircle" ng-style="myObjcolor">
-          </div>
-          <div class="col-md-7 text-left">
-            <div style="margin-top:3em;">
-              <span style="font-size:18px;color:#5B5B5B;">Successfully Completed Grade 3 science & Technology Classes</span>
-            </div>
-            <div class="stucardtext">
-              <span style="font-size:18px;"><b>Laren Ralpha</b></span>
-            </div>
-            <div style="padding-bottom: 20px;">
-              <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Scientology Student - Europe</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row" style="margin-top:2em;">
-      <div class="col-md-6" style="position: relative;">
-        <div class="movie-card">
-          <div class="col-md-7  carddesign">
-            <div style="margin-top:3em;" class="mobilepadd">
-              <span style="font-size:18px;color:#5B5B5B;">Trignometry & Science With Astro Colloboration</span>
-            </div>
-            <div class="stucardtext1">
-              <span style="font-size:18px;"><b>Linda Camilia</b></span>
-            </div>
-            <div style="padding-bottom: 4em;">
-              <span style="font-size:15px;color:#5B5B5B;margin-bottom: 20px;">Social Student - Australia</span>
-            </div>
-          </div>
-          <div class="circleright">
-            <div><b>83%</b></div>
-          </div>
-          <div class="colorcircle1" ng-style="myObjcolor">
-          </div>
-          <div class="col-md-5 studentcard1" style="min-height:300px;">
-            <img src="/static/images/24tut/student1.png" class="imgstyle" style="margin-bottom: 20px;" />
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6" style="position: relative;">
-        <div class="movie-card">
-          <div class="col-md-7  carddesign">
-            <div style="margin-top:3em;" class="mobilepadd">
-              <span style="font-size:18px;color:#5B5B5B;">Successfully Completed Grade 3 science & Technology Classes</span>
-            </div>
-            <div class="stucardtext1">
-              <span style="font-size:18px;"><b>Laren Ralpha</b></span>
-            </div>
-            <div style="padding-bottom: 4em;">
-              <span style="font-size:15px;color:#5B5B5B;">Scientology Student - Europe</span>
-            </div>
-          </div>
-          <div class="circleright">
-            <div><b>83%</b></div>
-          </div>
-          <div class="colorcircle1">
-          </div>
-          <div class="col-md-5 studentcard1" style="min-height:300px;">
-            <img src="/static/images/24tut/student3.png" class="imgstyle" style="margin-bottom: 20px;" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
 
-  <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');margin:0">
-    <div class="container">
-      <div class=" text-center" style="margin-top:4em;">
-        <span class="stuhead">Students are Benefited through these Values</span><br>
-        <span class="u_line line-u"></span>
-      </div>
-      <div class="row">
-        <div class="col-md-12  text-center">
-          <div style="padding-top: 3em;">
-            <img src="static/images/24tut/circle with video cam.png" width='100px' height='100px' />
-          </div>
-
-
-        </div>
-        <div class="col-md-4 text-center courses1 " style="margin-top:6em;">
-          <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet sfgd.</li>
-            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
-          </ul>
-        </div>
-        <div class="col-md-4 text-center courses1 " style="margin-top:6em;">
-          <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
-            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
-          </ul>
-        </div>
-        <div class="col-md-4 text-center courses1 " style="margin-top:6em;">
-          <ul>
-            <li>Lorem ipsum dolor sit amet sgjklfgh</li>
-            <li>Lorem ipsum dolor sit amet sfgd.</li>
-            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="text-center" style="margin-bottom:2em;"><button class="btn-style1" type="button">Learn About our Values</button></div>
-
-    </div>
-
-  </div>
-
-  <div class="container-fluid" style="padding-bottom:2em;border-bottom: 1px solid #F1F1F1;background-image: url('/static/images/24tut/part.png');background-size: cover;background-repeat: no-repeat">
-    <div class="container" style="margin-top:4em;">
-      <div class="col-md-4" style="padding-bottom: 2em;">
-        <span style="font-size:18px;color:#5B5B5B;"><b style="color:#000;">eLearny</b> has changed my life.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
-        <div style="font-size:18px;color:#5B5B5B;margin-top:2em;"><b style="color:#000;">eLearny</b> has changed my life.Lorem ipsum dolor sit amet.</div>
-        <div style="font-size:25px;padding-top:2em;"><b>Linda Cameillia</b></div>
-        <span style="font-size:16px;color:#5B5B5B;"> Social Student - Australia</span>
-      </div>
-      <div class="col-md-4 imghide">
-        <div class="text-left" style="float:left;">
-          <img src="/static/images/24tut/iphone.png" width='380px' height='480px' />
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="flex-container text-center">
-          <div class="flex-item ">
-            <div class="stublock">
-              <img src="/static/images/24tut/tell5.png" style="width: 110px;height: 110px;border-radius: 55px;">
-              <div class="viewstudent">
-                <img src="/static/images/24tut/clip.png">
+    <div class="container text-center" style="margin-bottom:4em;">
+      <h1 style="padding-top: 2em;color:#ooo;"><b>What students say about us</b></h1>
+      <span style="font-size:20px;color:#5B5B5B;">Their Lives are Better Now</span>
+      <div class="row" style="margin-top:2em;">
+        <div class="col-md-6" style="position: relative;">
+          <div class="movie-card">
+            <div class="col-md-5 studentcard" style="min-height:300px;">
+              <img src="/static/images/24tut/ravi_kumar.jpg"  class="imgstyle" />
+            </div>
+            <div class="circle">
+              <div><b>99%</b></div>
+            </div>
+            <div class="colorcircle">
+            </div>
+            <div class="col-md-7 text-left">
+              <div style="margin-top:3em;">
+                <span style="font-size:18px;color:#5B5B5B;">Successfully attempted 34 mock tests</span>
+              </div>
+              <div class="stucardtext">
+                <span style="font-size:18px;"><b>Ravi Kumar</b></span>
+              </div>
+              <div style="padding-bottom: 20px;">
+                <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">B.Tech Student - NIT Trichy</span>
               </div>
             </div>
-            <div style="padding-top:1em;"> <b style="font-size:22px;">Jeena Davis</b></div>
-            <span style="font-size:16px;color:#5B5B5B;">Consultant</span>
           </div>
-          <div class="flex-item" style="padding-top: 2em;">
-            <div class="stublock">
-              <img src="/static/images/24tut/tell2.jpeg" style="width: 110px;height: 110px;border-radius: 55px;">
-              <div class="viewstudent">
-                <img src="/static/images/24tut/clip.png">
+        </div>
+        <div class="col-md-6" style="position: relative;">
+          <div class="movie-card">
+            <div class="col-md-5 studentcard" style="min-height:300px;">
+              <img src="/static/images/24tut/shivani_gupta.png"  class="imgstyle" />
+            </div>
+            <div class="circle">
+              <div><b>87%</b></div>
+            </div>
+            <div class="colorcircle" ng-style="myObjcolor">
+            </div>
+            <div class="col-md-7 text-left">
+              <div style="margin-top:3em;">
+                <span style="font-size:18px;color:#5B5B5B;">Viewed 1,300 Videos and attempted 8 Mock tests</span>
+              </div>
+              <div class="stucardtext">
+                <span style="font-size:18px;"><b> Shivani Gupta </b></span>
+              </div>
+              <div style="padding-bottom: 20px;">
+                <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">B.Tech Student - IIT Delhi</span>
               </div>
             </div>
-            <div style="padding-top:1em;"> <b style="font-size:22px;">Jenny Smith</b></div>
-            <span style="font-size:16px;color:#5B5B5B;">Consultant</span>
           </div>
-          <div class="flex-item" style="padding-top: 2em;">
-            <div class="stublock">
-              <img src="/static/images/24tut/tell1.jpeg" style="width: 110px;height: 110px;border-radius: 55px;">
-              <div class="viewstudent">
-                <img src="/static/images/24tut/clip.png">
+        </div>
+      </div>
+      <div class="row" style="margin-top:2em;">
+        <div class="col-md-6" style="position: relative;">
+          <div class="movie-card">
+            <div class="col-md-7  carddesign">
+              <div style="margin-top:3em;" class="mobilepadd">
+                <span style="font-size:18px;color:#5B5B5B;">Working as Software Engineer, Google</span>
+              </div>
+              <div class="stucardtext1">
+                <span style="font-size:18px;"><b> Pawan Singh Rathod </b></span>
+              </div>
+              <div style="padding-bottom: 4em;">
+                <span style="font-size:15px;color:#5B5B5B;margin-bottom: 20px;">B.Tech - CS - IIT Madras</span>
               </div>
             </div>
-            <div style="padding-top:1em;"> <b style="font-size:22px;">Stephina Cox</b></div>
-            <span style="font-size:16px;color:#5B5B5B;">Consultant</span>
+            <div class="circleright">
+              <div><b>93%</b></div>
+            </div>
+            <div class="colorcircle1" ng-style="myObjcolor">
+            </div>
+            <div class="col-md-5 studentcard1" style="min-height:300px;">
+              <img src="/static/images/pawan_rathod.jpg" class="imgstyle" style="margin-bottom: 20px;" />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6" style="position: relative;">
+          <div class="movie-card">
+            <div class="col-md-7  carddesign">
+              <div style="margin-top:3em;" class="mobilepadd">
+                <span style="font-size:18px;color:#5B5B5B;"> Joined University of Michigan for PhD in Mechanical Engineering</span>
+              </div>
+              <div class="stucardtext1">
+                <span style="font-size:18px;"><b>Shubham Verma</b></span>
+              </div>
+              <div style="padding-bottom: 4em;">
+                <span style="font-size:15px;color:#5B5B5B;">B.Tech + M.Tech - IIT Kanpur</span>
+              </div>
+            </div>
+            <div class="circleright">
+              <div><b>94%</b></div>
+            </div>
+            <div class="colorcircle1">
+            </div>
+            <div class="col-md-5 studentcard1" style="min-height:300px;">
+              <img src="/static/images/shubham_verma.jpg" class="imgstyle" style="margin-bottom: 20px;" />
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-
-
-
 </div>
 
 {% endverbatim %}
