--- a/homepage/templates/aboutUs.html
+++ b/homepage/templates/aboutUs.html
@@ -4,44 +4,40 @@
 
 {% verbatim %}
 
-<div class="container-fluid no_padding about_head"style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');">
-  <div class="col-md-12" style="padding-top:14%;padding-left:8%;">
+<div class="container-fluid no_padding about_head"style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/24tut/diss.jpg');">
+  <div class="col-md-12" style="padding-top:14%;padding-left:15%;">
     <span style="color:#fff;font-size:4em;font-weight:bolder;">About</span><br>
     <span class="u_line"></span>
     <h5 style="color:#fff;">Home / About</h5>
   </div>
 </div>
 
-<div class="container-fluid no_padding" style="min-height:45vh;margin:30px auto;background-image:url('static/images/24tut/part.png');background-size:contain;background-position:right;background-repeat:no-repeat;">
+<div class="container-fluid no_padding" style="min-height:45vh;margin:30px auto;background-image:url('/static/images/24tut/part.png');background-size:contain;background-position:right;background-repeat:no-repeat;">
   <div class="col-md-9 col-md-offset-1">
     <div class="col-md-4 col-md-offset-1">
       <span class="heading_small">EXPLORE THE WIDE RANGE OF OPTIONS</span>
-      <h2 class="heading_medium">The Best Course Design for you crafted by professionals</h2>
+      <h2 class="heading_medium">The Best Course Design for you crafted by IITians</h2>
       <span class="u_line"></span>
       <div class="min_padd">
-        <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ea commodo consequat.</span>
-        <div class="min_padd">
-          <h4 class=""> <b>JEAN DEAN</b> </h4>
-          <h5 class="text-muted">-eLearny Founder</h5>
-        </div>
+        <span class="heading_small">Get the advanced edge with our award winning courses and mock tests.</span>
       </div>
     </div>
     <div class="col-md-6 col-md-offset-1">
       <div class="col-md-6">
         <div class="container-fluid hero_card">
-          <div class="hero_img" style="background-image:url('static/images/24tut/ilearn.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
+          <div class="hero_img" style="background-image:url('/static/images/24tut/ilearn.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
           <div class="col-md-12">
             <h1 class="pro_head">Interactive Learning</h1>
-            <h4 class="heading_small" style="line-height:2;">Mistaken idea of denouncing pleasure and praising pain was born and will give.</h4>
+            <h4 class="heading_small" style="line-height:2;">All questions/ test papers are suppoted with our whiteboard technology where you can solve questions and learn new things fatser.</h4>
           </div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="container-fluid hero_card">
-          <div class="hero_img" style="background-image:url('static/images/24tut/hands.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
+          <div class="hero_img" style="background-image:url('/static/images/24tut/hands.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
           <div class="col-md-12">
             <h1 class="pro_head">Exclusive Support</h1>
-            <h4 class="heading_small" style="line-height:2;">Explain to you how all this mistaken idea of denouncing pleaure and praising pain was born.</h4>
+            <h4 class="heading_small" style="line-height:2;">Are we online at 3 AM ? yes we are.</h4>
           </div>
         </div>
       </div>
@@ -51,7 +47,7 @@
 <div class="container-fluid no_padding cent_div"style="background-image: linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)), url('static/images/24tut/meeting.png');">
   <div class="col-md-12 text-center cent_head">
     <h1 class="heading_big" style="color:#fff;">Our Process</h1>
-    <h5 class="heading_small" style="color:#fff;">SIMPLE & EFFICIENT</h5>
+    <h5 class="heading_small" style="color:#fff;">Simple & Efficient</h5>
   </div>
   <div class="container-fluid">
     <div class="container dash_container">
@@ -61,7 +57,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">01</span> <span class="pro_head" style="color:#fff">Plan</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
-          <span class="pro_descrp">a detailed proposal for doing or achieving something with dedication.</span>
+          <span class="pro_descrp">A detailed and personalized approach for students of different learning curves.</span>
         </div>
       </div>
       <div class="dash cent">
@@ -70,7 +66,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">02</span> <span class="pro_head" style="color:#fff">Study</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
-          <span class="pro_descrp">learn about a subject, especially in an educational course or by reading books</span>
+          <span class="pro_descrp">Learn any subject, especially maths because you know its maths</span>
         </div>
       </div>
       <div class="dash cent">
@@ -79,7 +75,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">03</span> <span class="pro_head" style="color:#fff">Experiment</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
-          <span class="pro_descrp">a procedure carried out to support, refute, or validate a hypothesis.</span>
+          <span class="pro_descrp">Attempt unlimited numbers of mock test when you feel you need to.</span>
         </div>
       </div>
       <div class="dash cent">
@@ -88,16 +84,16 @@
         <div class="pro_title text-center">
           <span class="pro_num">04</span> <span class="pro_head" style="color:#fff">Score</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
-          <span class="pro_descrp">the number of points, goals, runs achieved in a game by a team or an individual.</span>
+          <span class="pro_descrp">Understand your strengths and weakness.</span>
         </div>
       </div>
       <div class="dashlast cent centlast">
         <img src="/static/images/24tut/diploma.png" class="pro_img" width="40%">
         <img src="/static/images/24tut/license.png" class="pro_over_img" width="40%">
         <div class="pro_title">
-          <span class="pro_num">05</span> <span class="pro_head" style="color:#fff">Get Certified</span>
+          <span class="pro_num">05</span> <span class="pro_head" style="color:#fff">Get an IIT</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
-          <span class="pro_descrp">officially recognize as possessing certain qualifications or meeting certain standards.</span>
+          <span class="pro_descrp">We have seen a common student getting into IIT with self study methods and you too can.</span>
         </div>
       </div>
     </div>
@@ -112,15 +108,13 @@
       <h2 class="heading_medium">Promoting Good Education since the Very beginning</h2>
       <span class="u_line"></span>
       <div class="min_padd">
-        <span class="heading_small" style="line-height:1.7;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          iusmod tempor incididunt ut labore et dolore magna aliqua quis nostrud exercitation.</span>
+        <span class="heading_small" style="line-height:1.7;">We never ask for money. When you feel you need to talk to a tutor then we will be here to help.</span>
       </div>
       <div class="min_padd">
         <h3> <b>Our Partners</b> </h3>
         <div class="row">
           <img src="/static/images/24tut/partner1.svg" width="25%" class="partners">
           <img src="/static/images/24tut/partner2.png" width="25%" class="partners">
-          <img src="/static/images/24tut/partner3.png" width="25%" class="partners">
         </div>
       </div>
     </div>
