--- a/libreERP/templates/base.html
+++ b/libreERP/templates/base.html
@@ -66,7 +66,7 @@
   {% endif %}
 
 
-  <script src="https://app.syrow.com/script/chatter-SFKOPOeCS2l8WcCg5N0tXwGf+Yd1T7iVNwH28qDmxt4=.js"></script>
+  <!-- <script src="https://app.syrow.com/script/chatter-SFKOPOeCS2l8WcCg5N0tXwGf+Yd1T7iVNwH28qDmxt4=.js"></script> -->
 
 
 
