--- a/homepage/templates/tutorBase.html
+++ b/homepage/templates/tutorBase.html
@@ -27,6 +27,7 @@
 
 {% endblock %} {% block specific_css %}
 <link href="{% static 'css/homepage.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'css/angular-ui-switch.min.css' %}" charset="utf-8">
 <!-- <link rel="stylesheet" href="{% static 'css/custom/base.css' %}" charset="utf-8"> -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css" charset="utf-8">
 
@@ -59,6 +60,7 @@
 <script src="{% static 'js/app.homepage.main.js' %}"></script>
 <script src="{% static 'js/angular-owl-carousel-2.js' %}"></script>
 <script src="{% static 'js/datetimepicker.js' %}"></script>
+<script src="{% static 'js/angular-ui-switch.min.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
 <script src="{% static 'js/custom/nativeJS.js' %}"></script>
 <script src="{% static 'js/custom/filters.js' %}"></script>
