--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2307,6 +2307,10 @@ hr {
   border-top-right-radius: 8px;
 }
 
+.noteImage {
+  width: 20%;
+}
+
 /* exams css properties */
 /* for normal screens ends here.... */
 @media only screen and (device-width: 1352px) and (device-height: 641px) {
@@ -2767,6 +2771,9 @@ hr {
 
   /* mobile display size starts here.... */
   /* courses */
+  .noteImage {
+    width: 100%;
+  }
   .arrow:before {
     content: "";
     /* border-top: 20px solid transparent;
@@ -2781,8 +2788,9 @@ hr {
     border-width: 20px 20px 20px 0;
     border-color: transparent #fff transparent
   }
-  .imgstyle{
-    width:125px;
+
+  .imgstyle {
+    width: 125px;
     height: 140px;
     border-radius: 0px;
   }
