--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1562,20 +1562,11 @@ hr {
   border-radius: 65px;
   /* border: 2px solid #A9A9A9; */
   position: absolute;
-  top: 17%;
-  left: 34%;
+  top: 43%;
+  left: 78%;
+  z-index:-20;
 }
 
-.movie-card:hover .colorcircle {
-  width: 130px;
-  height: 130px;
-  border-radius: 65px;
-  /* border: 2px solid #A9A9A9; */
-  background-color: #FFD119;
-  position: absolute;
-  top: 17%;
-  left: 34%;
-}
 
 .colorcircle1 {
   width: 130px;
