--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -264,11 +264,11 @@
         {% for r in refbookobjs %}
         <div class="col-md-6 col-xs-12" style="position: relative;text-decoration:none;">
           <div class="movie-card" style="border-bottom-left-radius:0px;border-bottom-right-radius:0px;">
-            <div class="colorcircle" style="background-color:{{color}}"></div>
-            <div class="col-md-5 studentcard col-xs-5" style="min-height:300px;">
+            <div class="col-md-5 studentcard col-xs-5" style="min-height:300px;position:relative">
+              <div class="colorcircle" style="background-color:{{color}}"></div>
               <img src="/media/{{r.book.dp}}" class="imgstyle" style="border-bottom-left-radius:0px;border-bottom-right-radius:0px;">
             </div>
-            <div class="col-md-7 text-left col-xs-7">
+            <div class="col-md-7 text-left col-xs-7"style="z-index:20;">
               <div style="margin-top:1em;">
                 <span style="font-size:18px;color:#5B5B5B;"> <strong>{{r.book.title}}</strong> </span><br>
                 <span style="color:#5B5B5B;"> <b>Volume - </b> {{r.book.volume}}</span><br>
